overflow fixed

--- a/kp.css
+++ b/kp.css
@@ -115,7 +115,7 @@ a:visited{ color:white;}
 
 @media screen and (max-width: 768px){
     body{
-        overflow-x: hidden;
+        overflow: hidden;
     }
     .nav-links {
         position: absolute;
